--- a/Views/Flights/Details.cshtml
+++ b/Views/Flights/Details.cshtml
@@ -61,6 +61,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-flightId="@Model?.FlightId">Edit</a> | 
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" class="btn btn-warning flight-action" asp-route-flightId="@Model?.FlightId">Edit</a> |
+    <form asp-action="Delete" method="post" class="flight-action">
+        @Html.HiddenFor(model => model.FlightId)
+        <input type="submit" value="Delete" class="btn btn-danger"/>
+    </form> | 
+    <a asp-action="Index" class="btn btn-secondary flight-action">Back to List</a>
 </div>
