--- a/Views/Flights/AddFlight.cshtml
+++ b/Views/Flights/AddFlight.cshtml
@@ -23,14 +23,24 @@
                 <span asp-validation-for="Airline" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ArrivalTime" class="control-label"></label>
-                <input asp-for="ArrivalTime" class="form-control" />
-                <span asp-validation-for="ArrivalTime" class="text-danger"></span>
+                <label asp-for="DepartureDate" class="control-label"></label>
+                <input type="date" asp-for="DepartureDate" class="form-control" />
+                <span asp-validation-for="DepartureDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ArrivalDate" class="control-label"></label>
+                <input type="date" asp-for="ArrivalDate" class="form-control" />
+                <span asp-validation-for="ArrivalDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DepartureTime" class="control-label"></label>
-                <input asp-for="DepartureTime" class="form-control" />
+                <input type="time" asp-for="DepartureTime" class="form-control" />
                 <span asp-validation-for="DepartureTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ArrivalTime" class="control-label"></label>
+                <input type="time" asp-for="ArrivalTime" class="form-control" />
+                <span asp-validation-for="ArrivalTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
@@ -53,11 +63,15 @@
                 <span asp-validation-for="Seats" class="text-danger"></span>
             </div>
             <div class="form-group">
-				<input type="submit" value="Add Flight" class="btn btn-primary" /> |
+                <input type="submit" value="Add Flight" class="btn btn-primary" /> |
                 <a asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
