Update for mia. Edit, Details are updated. Search added for flight but it is not working 100% right.

--- a/Views/Flights/Details.cshtml
+++ b/Views/Flights/Details.cshtml
@@ -22,18 +22,31 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Airline)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DepartureDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DepartureDate)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ArrivalDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ArrivalDate)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DepartureTime)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DepartureTime)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ArrivalTime)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ArrivalTime)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DepartureTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DepartureTime)
-        </dd>
+        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
