--- a/Views/Flights/Index.cshtml
+++ b/Views/Flights/Index.cshtml
@@ -12,9 +12,9 @@
     </head>
     <body>
         <form class="d-flex" asp-action="Search" method="get">
-            <input class="form-control" type="text" placeholder="From" name="searchStringFrom"/>
-            <input class="form-control" type="text" placeholder="Going to" name="searchStringTo" />
-            <input class="form-control" type="date" name="searchStringDepartureDate" />
+            <input class="form-control" type="text" placeholder="From" name="searchStringFrom" required/>
+            <input class="form-control" type="text" placeholder="Going to" name="searchStringTo" required/>
+            <input class="form-control" type="date" id="searchStringDepartureDate" name="searchStringDepartureDate" required />
             <button class="btn btn-outline-success" type="Submit">Search</button>
         </form>
         <p>
@@ -22,3 +22,8 @@
         </p>
     </body>
 </html>
+<script>
+    // JavaScript code to set today's date as the placeholder
+    var today = new Date().toISOString().slice(0, 10);
+    document.getElementById("searchStringDepartureDate").setAttribute('value', today);
+</script>
