--- a/Views/Flights/SearchFlight.cshtml
+++ b/Views/Flights/SearchFlight.cshtml
@@ -60,7 +60,7 @@
             }
         }
         <p>
-            <a class="btn btn-outline-primary" asp-area="" asp-action="AddFlight">Add Flight</a>
+            <a class="btn btn-outline-primary" asp-area="" asp-action="Create">Add Flight</a>
         </p>
     </body>
 </html>
