--- a/Views/Flights/Index.cshtml
+++ b/Views/Flights/Index.cshtml
@@ -18,7 +18,7 @@
             <button class="btn btn-outline-success" type="Submit">Search</button>
         </form>
         <p>
-            <a class="btn btn-outline-primary" asp-area="" asp-action="AddFlight">Add Flight</a>
+            <a class="btn btn-outline-primary" asp-area="" asp-action="Create">Add Flight</a>
         </p>
     </body>
 </html>
