update Room function

--- a/Views/Hotels/List.cshtml
+++ b/Views/Hotels/List.cshtml
@@ -42,7 +42,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.HotelId">Edit</a> |
-                <a asp-action="Index" asp-controller="Room" asp-route-hotelId="@item.HotelId" class="btn btn-warning">View Hotel</a> |
+                <a asp-action="Index" asp-controller="Rooms" asp-route-hotelId="@item.HotelId" class="btn btn-warning">View Hotel</a> |
                 <a asp-action="Delete" asp-route-id="@item.HotelId">Delete</a>
             </td>
         </tr>
