--- a/Views/Rooms/Index.cshtml
+++ b/Views/Rooms/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create" asp-route-hotelId="@ViewBag.HotelId" class="btn btn-primary">Create New Room</a>
+    <a asp-action="Create" asp-route-HotelId="@ViewBag.HotelId" class="btn btn-primary">Create New Room</a>
 </p>
 <table class="table">
 
