--- a/Views/Cars/Create.cshtml
+++ b/Views/Cars/Create.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "ListCar";
 }
 
-<h1>ListCar</h1>
+<h1>List Car</h1>
 
 <h4>Car</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="ListCar">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PlateNumber" class="control-label"></label>
@@ -23,14 +23,9 @@
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PickUpLocation" class="control-label"></label>
-                <input asp-for="PickUpLocation" class="form-control" />
-                <span asp-validation-for="PickUpLocation" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Make" class="control-label"></label>
-                <input asp-for="Make" class="form-control" />
-                <span asp-validation-for="Make" class="text-danger"></span>
+                <label asp-for="Brand" class="control-label"></label>
+                <input asp-for="Brand" class="form-control" />
+                <span asp-validation-for="Brand" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Model" class="control-label"></label>
@@ -58,7 +53,7 @@
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="ListCar" class="btn btn-primary" /> |     
+                <input type="submit" value="List Car" class="btn btn-primary" /> |     
                 <a asp-action="Index">Back to List</a>
 
             </div>
