--- a/Views/Cars/Details.cshtml
+++ b/Views/Cars/Details.cshtml
@@ -23,16 +23,10 @@
             @Html.DisplayFor(model => model.City)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PickUpLocation)
+            @Html.DisplayNameFor(model => model.Brand)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PickUpLocation)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Make)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Make)
+            @Html.DisplayFor(model => model.Brand)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Model)
@@ -68,6 +62,6 @@
 </div>
 <div>
     <a asp-action="Edit" class="btn btn-warning" asp-route-carId="@Model?.CarId">Edit</a> |
-    <a asp-action="Delete" class="btn btn-danger" asp-route-carId="@Model?.CarId">Edit</a> |
+    <a asp-action="Delete" class="btn btn-danger" asp-route-carId="@Model?.CarId">Delete</a> |
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
