Added Edit View and controller for cars

--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -37,7 +37,7 @@
                             <td>@car.Model</td>
                             <td>@car.Brand</td>
                             <td>@car.Description</td>
-                            <td>@car.Price</td>
+                            <td>$@car.Price</td>
                             <td>@car.Rating</td>
                             <td><a asp-action="Details" asp-route-carId="@car.CarId"><i class="fa-solid fa-circle-info"></i></a></td>
                         </tr>
