--- a/Views/Cars/Edit.cshtml
+++ b/Views/Cars/Edit.cshtml
@@ -1,16 +1,18 @@
 ﻿@model COMP2139_Assignment1.Models.Car
 
 @{
-    ViewData["Title"] = "ListCar";
+    ViewData["Title"] = "Edit Car";
 }
 
-<h1>List Car</h1>
+<h1>Edit</h1>
 
 <h4>Car</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="CarId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PlateNumber" class="control-label"></label>
@@ -29,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control" ></textarea>
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -53,14 +55,18 @@
                 <span asp-validation-for="RentalCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="List Car" class="btn btn-primary" /> |     
-                <a asp-action="Index">Back to List</a>
-
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
+<div>
+    <a asp-action="Details" asp-route-flightId="@Model.CarId">Back to List</a>
+</div>
+
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
