--- a/Views/Cars/Edit.cshtml
+++ b/Views/Cars/Edit.cshtml
@@ -1,19 +1,18 @@
-﻿@model COMP2139_Assignment1.Models.Car
+﻿@model Car
 
 @{
-    ViewData["Title"] = "Edit Car";
+    ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
 
-<h4>Car</h4>
+<h4>Project</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CarId" />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="PlateNumber" class="control-label"></label>
                 <input asp-for="PlateNumber" class="form-control" />
@@ -30,11 +29,6 @@
                 <span asp-validation-for="Model" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="City" class="control-label"></label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
@@ -43,6 +37,11 @@
                 <label asp-for="PickUpLocation" class="control-label"></label>
                 <input asp-for="PickUpLocation" class="form-control" />
                 <span asp-validation-for="PickUpLocation" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <textarea asp-for="Description" class="form-control"></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
@@ -62,7 +61,7 @@
 </div>
 
 <div>
-    <a asp-action="Details" asp-route-flightId="@Model.CarId">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
