--- a/Views/Hotels/Details.cshtml
+++ b/Views/Hotels/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model COMP2139_Assignment1.Models.Hotel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Hotel</h4>
     <hr />
@@ -36,10 +35,12 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="HotelId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+</div>
+<div>
+    <a asp-action="Edit" class="btn btn-warning" asp-route-hotelId="@Model?.HotelId">Edit</a> |
+    <form asp-action="DeleteConfirmed" method="post" class="flight-action">
+        @Html.HiddenFor(model => model.HotelId)
+        <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
+    <a asp-action="Index">Back to List</a>
 </div>
