--- a/Views/CarBookings/Create.cshtml
+++ b/Views/CarBookings/Create.cshtml
@@ -9,14 +9,15 @@
 <h4>Car</h4>
 <hr />
 <div class="row">
-    <p>Are you sure you want to Book the car with License plate @ViewData["PlateNumber"] in @ViewData["City"]. This car is a @ViewData["Brand"] @ViewData["Model"], and is being rented out by
+    <p>
+        Are you sure you want to Book the car with License plate @ViewData["PlateNumber"] in @ViewData["City"]. This car is a @ViewData["Brand"] @ViewData["Model"], and is being rented out by
         @ViewData["RentalCompany"] at a price of $@ViewData["Price"] per day.
     </p>
     <p>If you are sure you want to book this car please enter the following information and press Confirm</p>
 </div>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" asp-route-carId="@ViewData["carId"]">
+        <form asp-action="Create" asp-route-CarId="@ViewData["CarId"]">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="BookedStartDate" class="control-label"></label>
@@ -30,7 +31,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Confirm" class="btn btn-primary" /> |
-                <a asp-controller="Cars" asp-action="Index" >Back to Car</a>
+                <a asp-controller="Cars" asp-action="Index">Back to Car</a>
             </div>
         </form>
     </div>
@@ -41,3 +42,4 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+
