--- a/Views/Rooms/Details.cshtml
+++ b/Views/Rooms/Details.cshtml
@@ -29,20 +29,14 @@
             @Html.DisplayFor(model => model.Rating)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsAvailable)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsAvailable)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Hotel)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Hotel.Description)
+            @Html.DisplayFor(model => model.Hotel.HotelName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.RoomId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.RoomId">Edit</a> | 
+    <a asp-action="Index" asp-route-hotelId="@Model?.HotelId">Back to List</a>
 </div>
