--- a/Views/CarBookings/Create.cshtml
+++ b/Views/CarBookings/Create.cshtml
@@ -18,6 +18,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" asp-route-CarId="@ViewData["CarId"]">
+            <input type="hidden" asp-for="CarId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="BookedStartDate" class="control-label"></label>
