--- a/Views/CarBookings/Index.cshtml
+++ b/Views/CarBookings/Index.cshtml
@@ -33,7 +33,13 @@
 						<td>@ViewData["Model"]</td>
 						<td>@ViewData["PlateNumber"]</td>
 						<td>@ViewData["RentalCompany"]</td>
-						<td>@(Convert.ToDouble(ViewData["Price"]) * (carBooking.BookedEndDate - carBooking.BookedStartDate).TotalDays)</td
+						<!--Calculating the total price -->
+						<td>@{
+								double calculatedPrice = (Convert.ToDouble(ViewData["Price"]) * (carBooking.BookedEndDate - carBooking.BookedStartDate).TotalDays);
+							}
+							@{double @minimumPrice = Convert.ToDouble(ViewData["Price"]);};
+							@{double finalPrice = Math.Max(calculatedPrice, minimumPrice);};
+							</td>
 						<td>
 @* 							<a asp-controller="Project" asp-action="Details" asp-route-id="@project.ProjectId" class="btn btn-info">Details</a> *@
 @* 							<a asp-controller="Project" asp-action="Edit" asp-route-id="@project.ProjectId" class="btn btn-secondary">Edit Booking</a>
