--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -26,6 +26,7 @@
                         <td>Rating</td>
                         <td>Details</td>
                         <td>Book It!</td>
+                        <td>View Details for</td>
                     </tr>
                 </thead>
 
@@ -42,6 +43,9 @@
                             <td>@car.Rating</td>
                             <td><a asp-action="Details" asp-route-carId="@car.CarId"><i class="fa-solid fa-circle-info"></i></a></td>
                             <td><a asp-controller="CarBookings" class="btn btn-primary" asp-action="Create" asp-route-carId="@car.CarId">Book This Car!</a></td>
+                            <td><a asp-controller="CarBookings" asp-action="Search" asp-route-CarId="@car.CarId" class="btn btn-dark">@car.Brand @car.Model</a>
+
+                        </td>
                         </tr>
                     }
                 </tbody>
