--- a/Views/CarBookings/Index.cshtml
+++ b/Views/CarBookings/Index.cshtml
@@ -35,16 +35,13 @@
 						<td>@ViewData["RentalCompany"]</td>
 						<!--Calculating the total price -->
 						<td>@{
-								double calculatedPrice = (Convert.ToDouble(ViewData["Price"]) * (carBooking.BookedEndDate - carBooking.BookedStartDate).TotalDays);
-							}
-							@{double @minimumPrice = Convert.ToDouble(ViewData["Price"]);};
-							@{double finalPrice = Math.Max(calculatedPrice, minimumPrice);};
+							double calculatedPrice = (Convert.ToDouble(ViewData["Price"]) * (carBooking.BookedEndDate - carBooking.BookedStartDate).TotalDays);
+							double @minimumPrice = Convert.ToDouble(ViewData["Price"]);
+							double finalPrice = Math.Max(calculatedPrice, minimumPrice);}
+							@finalPrice
 							</td>
-						<td>
-@* 							<a asp-controller="Project" asp-action="Details" asp-route-id="@project.ProjectId" class="btn btn-info">Details</a> *@
-@* 							<a asp-controller="Project" asp-action="Edit" asp-route-id="@project.ProjectId" class="btn btn-secondary">Edit Booking</a>
-							<a asp-controller="Project" asp-action="Delete" asp-route-id="@project.ProjectId" class="btn btn-danger">CancelBooking</a> *@
-
+						<td>					
+							@* <a asp-controller="carBookings" asp-action=""></a> *@
 						</td>
 
 					</tr>
