--- a/Views/Rooms/Details.cshtml
+++ b/Views/Rooms/Details.cshtml
@@ -37,6 +37,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.RoomId">Edit</a> | 
+    <a asp-action="Edit" asp-route-hotelId="@Model?.HotelId">Edit</a> | 
+    <form asp-action="DeleteConfirmed" method="post" class="flight-action">
+        @Html.HiddenFor(model => model.RoomId)
+        <input type="submit" value="Delete" class="btn btn-danger" />
+    </form> |
     <a asp-action="Index" asp-route-hotelId="@Model?.HotelId">Back to List</a>
 </div>
