--- a/Views/CarBookings/Index.cshtml
+++ b/Views/CarBookings/Index.cshtml
@@ -20,7 +20,7 @@
 					<th>Car License Plate</th>
 					<th>Rented From</th>
 					<th>Total Price Paid</th>
-					<th>Cancel Booking</th>
+					<th>Actions</th>
 				</tr>
 			</thead>
 
@@ -41,8 +41,9 @@
 							double finalPrice = Math.Max(calculatedPrice, minimumPrice);}
 							$@finalPrice
 							</td>
-						<td>					
-							 <a asp-controller="CarBookings" class="btn btn-danger" asp-route-id="@carBooking.Id" asp-action="Delete">Cancel Booking</a> 
+						<td>
+							<a asp-controller="CarBookings" class="btn btn-secondary" asp-route-id="@carBooking.Id" asp-action="Edit">Edit Booking</a>
+							<a asp-controller="CarBookings" class="btn btn-danger" asp-route-id="@carBooking.Id" asp-action="Delete">Cancel Booking</a> 
 						</td>
 
 					</tr>
