--- a/Views/Shared/_Footer.cshtml
+++ b/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
-﻿<footer class="k">
+﻿<footer class="footer">
     <div class="">
-        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About"><i class="fa fa-info-circle" aria-hidden="true"></i>North Pole - About us</a>
+        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About"><i class="fa fa-info-circle" aria-hidden="true"></i> North Pole - About us</a>
     </div>
 </footer>
