--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
 }
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/Logo.jpg" alt="Logo" width="100px" height="100px" /></a>
+        <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="Index"><img class="nav-image" src="~/img/Logo2.png" alt="Logo" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -10,13 +10,16 @@
         <div class="navbar-collapse collapse d-sm-inline-flex ">
             <ul class="navbar-nav flex-grow-1 justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Flights" asp-action="Index">Flight</a>
+                    <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Hotels" asp-action="Index">Hotel</a>
+                    <a class="nav-link " asp-area="" asp-controller="Flights" asp-action="Index">Flights</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">Car</a>
+                    <a class="nav-link " asp-area="" asp-controller="Hotels" asp-action="Index">Hotels</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " asp-area="" asp-controller="Cars" asp-action="Index">Cars</a>
                 </li>
             </ul>
         </div>
