--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -10,16 +10,16 @@
         <div class="navbar-collapse collapse d-sm-inline-flex ">
             <ul class="navbar-nav flex-grow-1 justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="" asp-controller="Flights" asp-action="Index">Flights</a>
+                    <a class="nav-link " asp-area="" asp-controller="Flights" asp-action="Index"><i class="fa-solid fa-plane"></i> Flights</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="" asp-controller="Hotels" asp-action="Index">Hotels</a>
+                    <a class="nav-link " asp-area="" asp-controller="Hotels" asp-action="Index"><i class="fa-solid fa-hotel"></i> Hotels</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="" asp-controller="Cars" asp-action="Index">Cars</a>
+                    <a class="nav-link " asp-area="" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i> Cars</a>
                 </li>
             </ul>
         </div>
