--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <p>Your Personal Booking Site</p>
         </div>
         <div>
-            <p class="mt-3 mt-md-0">I want to book a:</p>
+            <p class="mt-3 mt-md-0">I want to book a</p>
             <div class="">
                 <ul class="home-ul">
                     <li class="mt-2">
