--- a/Views/Cars/Create.cshtml
+++ b/Views/Cars/Create.cshtml
@@ -4,62 +4,60 @@
     ViewData["Title"] = "ListCar";
 }
 
-<h1>List Car</h1>
+<h1 class="text-center">List A Car</h1>
 
-<h4>Car</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="PlateNumber" class="control-label"></label>
-                <input asp-for="PlateNumber" class="form-control" />
-                <span asp-validation-for="PlateNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Brand" class="control-label"></label>
-                <input asp-for="Brand" class="form-control" />
-                <span asp-validation-for="Brand" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Model" class="control-label"></label>
-                <input asp-for="Model" class="form-control" />
-                <span asp-validation-for="Model" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control" ></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="City" class="control-label"></label>
-                <input asp-for="City" class="form-control" />
-                <span asp-validation-for="City" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PickUpLocation" class="control-label"></label>
-                <input asp-for="PickUpLocation" class="form-control" />
-                <span asp-validation-for="PickUpLocation" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RentalCompany" class="control-label"></label>
-                <input asp-for="RentalCompany" class="form-control" />
-                <span asp-validation-for="RentalCompany" class="text-danger"></span>
-            </div>
+    <div class=" center-screen">
+    <form asp-action="Create" class="d-flex flex-column col col-md-3 mx-auto">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="d-flex flex-column">
+            <label asp-for="PlateNumber" class="control-label mt-3"></label>
+            <input asp-for="PlateNumber" class="input-one col-12 " />
+            <span asp-validation-for="PlateNumber" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
+            <label asp-for="Brand" class="control-label mt-3"></label>
+            <input asp-for="Brand" class="input-one" />
+            <span asp-validation-for="Brand" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
+            <label asp-for="Model" class="control-label mt-3"></label>
+            <input asp-for="Model" class="input-one" />
+            <span asp-validation-for="Model" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
+            <label asp-for="Description" class="control-label mt-3"></label>
+            <textarea asp-for="Description" class="input-one input-desc"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
+            <label asp-for="City" class="control-label mt-3"></label>
+            <input asp-for="City" class="input-one" />
+            <span asp-validation-for="City" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
+            <label asp-for="PickUpLocation" class="control-label mt-3"></label>
+            <input asp-for="PickUpLocation" class="input-one" />
+            <span asp-validation-for="PickUpLocation" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
+            <label asp-for="Price" class="control-label mt-3"></label>
+            <input asp-for="Price" class="input-one" />
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
+            <label asp-for="RentalCompany" class="control-label mt-3"></label>
+            <input asp-for="RentalCompany" class="input-one" />
+            <span asp-validation-for="RentalCompany" class="text-danger"></span>
+        </div>
 
-            <div class="form-group">
-                <input type="submit" value="List Car" class="btn btn-primary" /> |     
-                <a asp-action="Index">Back to List</a>
+        <div class="form-group mt-3 center-screen">
+            <input type="submit" value="List Car" class="button-one w-250" /> 
+            <a class="button-two w-250 mt-3" asp-action="Index">Back to List</a>
 
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
+        
 </div>
 
 @section Scripts {
