--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -41,6 +41,9 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position:absolute;
+    width:100%;
+    bottom:0;
 }
     .footer a {
         color: white;
@@ -51,8 +54,9 @@ html {
     }
 
 main {
-    height: 70vh;
+    min-height: 70vh;
     width: 100%;
+    margin-bottom:15vh;
 }
 
 header {
@@ -82,29 +86,13 @@ nav {
         animation: rotateAnimation 2s ease-in-out;
     }
 
-@keyframes rotateAnimation {
-    0% {
-        transform: rotate(0deg);
-    }
 
-    33.33% {
-        transform: rotate(20deg);
-    }
-
-    66.66% {
-        transform: rotate(-20deg);
-    }
-
-    100% {
-        transform: rotate(0deg);
-    }
-}
 
 .index-wrapper {
     display: flex;
     justify-items: center;
     align-items: center;
-    height: 100%;
+    height: 70vh;
 }
 
 .index-div {
@@ -124,6 +112,32 @@ nav {
         margin-bottom: 0;
     }
 
+.home-ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+/*Car Index*/
+
+/*Index Pages Models*/
+.show-model {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap:20px;
+    color:white;
+}
+
+.show-model-card {
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items:center;
+    border-radius: 10px;
+    background-color: #1B1A55;
+    min-height:350px;
+    padding: 20px;
+}
+/*Utility*/
 .button-one {
     display: inline-block;
     outline: none;
@@ -138,6 +152,8 @@ nav {
     font-size: 16px;
     text-decoration: none;
     width: 200px;
+    text-decoration: none;
+    text-align: center;
 }
 
     .button-one:hover {
@@ -145,13 +161,72 @@ nav {
         box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1B1A55;
         color: white
     }
-
-.home-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.button-two {
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 3px;
+    padding: 12px 24px;
+    border: 0;
+    color: white;
+    background: #9290C3;
+    line-height: 1.15;
+    font-size: 16px;
+    text-decoration: none;
+    text-align: center;
 }
-/*Utility*/
+    .button-two:hover {
+        transition: all .1s ease;
+        box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1B1A55;
+        color:white;
+    }
+                
+    .input-one {
+    box-shadow: inset #abacaf 0 0 0 2px;
+    border: 0;
+    background: #e7ebee;
+    appearance: none;
+    width: 100%;
+    position: relative;
+    border-radius: 3px;
+    padding: 9px 12px;
+    line-height: 1.4;
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+    font-weight: 400;
+    height: 40px;
+    transition: all .2s ease;
+}
+
+    .input-one:hover {
+        box-shadow: 0 0 0 0 #fff inset, #535C91 0 0 0 2px;
+    }
+
+
+    .input-one:focus {
+        background: #fff;
+        outline: 0;
+        box-shadow: 0 0 0 0 #fff inset, #535C91 0 0 0 3px;
+    }
+
+.form-one{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    width:70%;
+}
+.input-price-div{
+    display:flex;
+    justify-content:space-between;
+}
+.input-price{
+    width:120px;
+}
+.input-desc{
+    height:60px;
+}
 .cursive {
     font-family: "Caveat Brush", cursive;
 }
@@ -170,6 +245,25 @@ nav {
 .color-4 {
     color: #070F2B;
 }
+.center-screen{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+}
+
+.fill-screen{
+    min-height:70vh;
+}
+w-125{
+    width:125px;
+}
+.w-250 {
+    width: 250px;
+}
+.w-500 {
+    width: 500px;
+}
 
 /*Media query*/
 @media (max-width: 576px) {
@@ -180,6 +274,13 @@ nav {
         .index-div h1 {
             font-size: 35px;
         }
+    .show-model {
+        display: grid;
+        grid-template-columns: 1fr ;
+        grid-gap: 20px;
+        color: white;
+    }
+
 }
 
 @media (min-width: 576px) {
@@ -218,4 +319,23 @@ nav {
 }
 
 @media (min-width: 1400px) {
+}
+
+
+@keyframes rotateAnimation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    33.33% {
+        transform: rotate(20deg);
+    }
+
+    66.66% {
+        transform: rotate(-20deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
